<resources>
    <string name="app_name">BookingApp</string>
    <string name="action_settings">Settings</string>
    <string name="Food_list">Food list</string>
    <string name="Biriyani">A_rich_and_flavorful_layered_indian_dish</string>
    <string name="Momo">Momo_is_a_type_of_steamed_dumpling_with_some_form_of_fillingo</string>
    <string name="Noodles">Noodle_is_a_piece_of_pasta_especially_a_long_skinny_one</string>
    <string name="Pizza">Pizza_is_a_savory_dish_of_italian_origin</string>
    <string name="Biriyani_message">You ordered a Biriyani</string>
    <string name="Momo_message">You odered a Momo</string>
    <string name="Noodles_message">You  ordered a Noodle</string>
    <string name="Pizza_message">You orderd a Pizza</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="order">Order</string>
    <string name="status">Status</string>
    <string name="favourites">Favourites</string>
    <string name="action_contact_message">You selected contact</string>
    <string name="action_order_message">You selected order</string>
    <string name="action_status_message">You selected status</string>
    <string name="action_favourite_message">You selected favourite</string>


</resources>
