<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bookingapp.MainActivity">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="10"
        android:title="@string/contact"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order"
        android:orderInCategory="20"
        android:title="@string/order"
        android:icon="@drawable/order"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_status"
        android:orderInCategory="30"
        android:title="@string/status"
        android:icon="@drawable/status"
        app:showAsAction="always"/>
    <item android:id="@+id/action_favourite"
        android:orderInCategory="40"
        android:title="@string/favourites"
        android:icon="@drawable/favourite"
        app:showAsAction="always" />


</menu>
