<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/tvFood"
        android:layout_width="265dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="@string/Food_list"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_biriyani"
        android:layout_width="139dp"
        android:layout_height="128dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/Biriyani"
        android:onClick="showBiriyani"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFood"
        app:srcCompat="@drawable/biriyani" />

    <ImageView
        android:id="@+id/iv_momo"
        android:layout_width="139dp"
        android:layout_height="128dp"
        android:contentDescription="@string/Momo"
        android:onClick="showMomo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_biriyani"
        app:srcCompat="@drawable/momo" />

    <ImageView
        android:id="@+id/iv_noodles"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@string/Noodles"
        android:onClick="showNoodles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_momo"
        app:srcCompat="@drawable/noodle" />

    <ImageView
        android:id="@+id/iv_pizza"
        android:layout_width="139dp"
        android:layout_height="128dp"
        android:contentDescription="@string/Pizza"
        android:onClick="showPizza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_noodles"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pizza" />

    <TextView
        android:id="@+id/tv_biriyani"
        android:layout_width="176dp"
        android:layout_height="73dp"
        android:layout_marginTop="60dp"
        android:text="@string/Biriyani"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toEndOf="@+id/iv_biriyani"
        app:layout_constraintTop_toBottomOf="@+id/tvFood" />

    <TextView
        android:id="@+id/tv_momo"
        android:layout_width="168dp"
        android:layout_height="95dp"
        android:layout_marginTop="36dp"
        android:text="@string/Momo"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toEndOf="@+id/iv_momo"
        app:layout_constraintTop_toBottomOf="@+id/tv_biriyani" />

    <TextView
        android:id="@+id/tv_noodles"
        android:layout_width="191dp"
        android:layout_height="74dp"
        android:layout_marginTop="40dp"
        android:text="@string/Noodles"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toEndOf="@+id/iv_noodles"
        app:layout_constraintTop_toBottomOf="@+id/tv_momo" />

    <TextView
        android:id="@+id/tv_pizza"
        android:layout_width="219dp"
        android:layout_height="61dp"
        android:layout_marginTop="60dp"
        android:text="@string/Pizza"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/iv_pizza"
        app:layout_constraintTop_toBottomOf="@+id/tv_noodles"
        app:layout_constraintVertical_bias="0.017" />
</androidx.constraintlayout.widget.ConstraintLayout>